Ensure correct alignment of icon and text

--- a/src/scss/includes/components/flex.scss
+++ b/src/scss/includes/components/flex.scss
@@ -3,5 +3,13 @@
 
   &--spaceBetween {
     justify-content: space-between;
-  } 
+  }
+
+  &--alignCenter {
+    align-items: center;
+  }
+
+  &--inline {
+    display: inline-flex;
+  }
 }
